email api integration

--- a/src/template/reset_user.html.hbs
+++ b/src/template/reset_user.html.hbs
@@ -200,7 +200,7 @@
                                     <img
                                       alt="VerseSign Logo"
                                       class="big"
-                                      src="{{ absoluteUrl('email-assets/logo_horizontal.png') }}"
+                                      {{!-- src="{{ absoluteUrl('email-assets/logo_horizontal.png') }}" --}}
                                       style="
                                         display: block;
                                         height: auto;
@@ -574,7 +574,8 @@
                                             ><img
                                               alt="Facebook"
                                               height="32"
-                                              src="{{ absoluteUrl('email-assets/facebook2x.png') }}"
+                                              src=""
+                                              {{!-- src="{{ absoluteUrl('email-assets/facebook2x.png') }}" --}}
                                               style="display: block; height: auto; border: 0"
                                               title="facebook"
                                               width="32"
@@ -587,7 +588,8 @@
                                             ><img
                                               alt="Linkedin"
                                               height="32"
-                                              src="{{ absoluteUrl('email-assets/linkedin2x.png') }}"
+                                              src=""
+                                              {{!-- src="{{ absoluteUrl('email-assets/linkedin2x.png') }}" --}}
                                               style="display: block; height: auto; border: 0"
                                               title="linkedin"
                                               width="32"
@@ -600,9 +602,9 @@
                                             ><img
                                               alt="Instagram"
                                               height="32"
-                                              src="{{
+                                              {{!-- src="{{
                                                 absoluteUrl('email-assets/instagram2x.png')
-                                              }}"
+                                              }}" --}}
                                               style="display: block; height: auto; border: 0"
                                               title="instagram"
                                               width="32"
